Add go back button in flashcard testing page

--- a/src/assets/scss/1-settings/css-properties/colors/_main.scss
+++ b/src/assets/scss/1-settings/css-properties/colors/_main.scss
@@ -10,3 +10,16 @@ $primary: (
   800: #773203,
   900: #3c1901
 );
+
+$secondary: (
+  50: #E8F5FD,
+  100: #D1EBFA,
+  200: #9ED5F5,
+  300: #70C1F0,
+  400: #41ADEB,
+  500: #1796DF,
+  600: #1379B4,
+  700: #0E5A86,
+  800: #093B58,
+  900: #051F2E
+)
